头部导航和轮播二次重构

--- a/index.html
+++ b/index.html
@@ -2,9 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <title>大猫旅行</title>
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+    <!--最外层的盒子-->
+    <div class="dm_container">
+        <!--顶部的搜索位置-->
+        <div class="dm_header">
+            <a href="#" class="header_logo3"></a>
+            <a href="#" class="header_logo"></a>
+           <!-- <input type="search" class="header_search" placeholder="请输入">-->
+            <a href="#" class="header_logo2"></a>
+        </div>
 
+        <!--lb-->
+        <div class="dm_banner">
+            <ul class="dm_banner_images clearfix">
+                <li><a href="#"><img src="images/lb4.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/lb1.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/lb2.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/lb3.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/lb4.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/lb1.jpg" alt=""></a></li>
+            </ul>
+            <ul class="banner_index clearfix">
+                <li class="current"></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
