头部导航和轮播二次重构03

--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
                 <li></li>
             </ul>
         </div>
+        <!--content 1精选频道-->
+        <div class="content_selected">
+            <p class="selected_title">精选频道</p>
+                <div class="selected f_l">
+                    <a href="#"><img src="images/jjx_img1.jpg" alt=""></a>
+                </div>
+                <div class="selected f_l">
+                    <a href="#"><img src="images/jx_img2.png" alt=""></a>
+                </div>
+        </div>
     </div>
 </body>
 </html>
