--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>大猫旅行</title>
     <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/home.css">
+
+    <script type="text/javascript">
+        document.addEventListener("touchstart",function (ev) {
+            ev = ev || event;
+            ev.preventDefault();
+        });
+        (function () {
+            let styleNode = document.createElement("style");
+            let width = document.documentElement.clientWidth/16;
+            styleNode.innerHTML = "html{font-size:"+width+"px!important}";
+            document.head.appendChild(styleNode);
+        })();
+    </script>
 </head>
 <body>
     <!--最外层的盒子-->
@@ -18,7 +31,6 @@
            <!-- <input type="search" class="header_search" placeholder="请输入">-->
             <a href="#" class="header_logo2"></a>
         </div>
-
         <!--lb-->
         <div class="dm_banner">
             <ul class="dm_banner_images clearfix">
@@ -45,7 +57,108 @@
                 <div class="selected f_l">
                     <a href="#"><img src="images/jx_img2.png" alt=""></a>
                 </div>
+                <div class="hr"></div>
         </div>
+        <!--目的地推荐-->
+            <div class="content_recommend content_selected">
+                <p class="selected_title">推荐目的地</p>
+                <ul class="recommend_img_list clearfix">
+                    <li><a href="#"><img src="images/Rom1.png" alt=""></a></li>
+                    <li><a href="#"><img src="images/Romm2.png" alt=""></a></li>
+                    <li><a href="#"><img src="images/Rom1.png" alt=""></a></li>
+                </ul>
+                <div class="hr"></div>
+        </div>
+        <!--内容区域-->
+        <div class="content_recommend2 content_selected">
+            <p class="selected_title">海上玩乐七十二变</p>
+            <ul class="recommend_img_list clearfix">
+                <li><a href="#"><img src="images/shop1.jpg" alt=""></a>
+                    <p class="p_text">云南丽江接机 丽江三义机场到丽江古城 束河古镇 面包车接机</p>
+                    <span class="shop_num">已售200份</span>
+                    <span class="shop_price"><i>￥500</i><em>起</em></span>
+                </li>
+                <li><a href="#"><img src="images/shop2.jpg" alt=""></a>
+                    <p class="p_text">云南丽江接机 丽江三义机场到丽江古城 束河古镇 面包车接机</p>
+                    <span class="shop_num">已售200份</span>
+                    <span class="shop_price"><i>￥500</i><em>起</em></span>
+                </li>
+                <li><a href="#"><img src="images/shop1.jpg" alt=""></a>
+                    <p class="p_text">云南丽江接机 丽江三义机场到丽江古城 束河古镇 面包车接机</p>
+                    <span class="shop_num">已售200份</span>
+                    <span class="shop_price"><i>￥500</i> <em>起</em></span>
+                </li>
+            </ul>
+            <div class="hr"></div>
+        </div>
+        <div class="content_recommend2 content_selected">
+            <p class="selected_title">做个SPA轻松一下</p>
+            <ul class="recommend_img_list clearfix">
+                <li><a href="#"><img src="images/shop3.jpg" alt=""></a>
+                    <p class="p_text">SPA油控出人没梦想体验台式SPA让身体彻底放松</p>
+                    <span class="shop_num">已售200份</span>
+                    <span class="shop_price"><i>￥500</i><em>起</em></span>
+                </li>
+                <li><a href="#"><img src="images/shop4.jpg" alt=""></a>
+                    <p class="p_text">云南丽江接机 丽江三义机场到丽江古城 束河古镇 面包车接机</p>
+                    <span class="shop_num">已售200份</span>
+                    <span class="shop_price"><i>￥500</i><em>起</em></span>
+                </li>
+                <li><a href="#"><img src="images/shop3.jpg" alt=""></a>
+                    <p class="p_text">云南丽江接机 丽江三义机场到丽江古城 束河古镇 面包车接机</p>
+                    <span class="shop_num">已售200份</span>
+                    <span class="shop_price"><i>￥500</i> <em>起</em></span>
+                </li>
+            </ul>
+            <div class="hr"></div>
+        </div>
+        <div class="content_recommend2 content_selected">
+            <p class="selected_title">日本三日极限游</p>
+            <ul class="recommend_img_list clearfix">
+                <li><a href="#"><img src="images/shop5.jpg" alt=""></a>
+                    <p class="p_text">体验全日航空的王牌美食领略不一样的旅游体验你值得拥有</p>
+                    <span class="shop_num">已售200份</span>
+                    <span class="shop_price"><i>￥500</i><em>起</em></span>
+                </li>
+                <li><a href="#"><img src="images/shop4.jpg" alt=""></a>
+                    <p class="p_text">云南丽江接机 丽江三义机场到丽江古城 束河古镇 面包车接机</p>
+                    <span class="shop_num">已售200份</span>
+                    <span class="shop_price"><i>￥500</i><em>起</em></span>
+                </li>
+                <li><a href="#"><img src="images/shop3.jpg" alt=""></a>
+                    <p class="p_text">云南丽江接机 丽江三义机场到丽江古城 束河古镇 面包车接机</p>
+                    <span class="shop_num">已售200份</span>
+                    <span class="shop_price"><i>￥500</i> <em>起</em></span>
+                </li>
+            </ul>
+            <div class="hr"></div>
+        </div>
+        <!--精选套餐-->
+        <div class="content_recommend2 content_selected">
+            <p class="selected_title">精选套餐</p>
+            <ul class="recommend_img_list clearfix">
+                <li><a href="#"><img src="images/jxuan1.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/jxuan2.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/jxuan1.jpg" alt=""></a></li>
+            </ul>
+            <div class="hr"></div>
+        </div>
+        <div class="while">
+        </div>
+        <div class="footer">
+            <div class="hr1"></div>
+             <ul class="footer-list">
+                 <li><img src="images/wxb主页.png" alt=""><br>主页
+                 </li>
+                 <li><img src="images/wxb定位.png" alt=""><br>定位
+                 </li>
+                 <li><img src="images/cart.png" alt=""><br>购物车
+                 </li>
+                 <li><img src="images/man.png" alt=""><br>我的
+                 </li>
+             </ul>
+        </div>
+
     </div>
 </body>
 </html>
