移动端content页面实现

--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>大猫旅行</title>
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/home.css">
-
     <script type="text/javascript">
-        document.addEventListener("touchstart",function (ev) {
+      /*  document.addEventListener("touchstart",function (ev) {
             ev = ev || event;
             ev.preventDefault();
-        });
+        });*/
         (function () {
             let styleNode = document.createElement("style");
             let width = document.documentElement.clientWidth/16;
             styleNode.innerHTML = "html{font-size:"+width+"px!important}";
             document.head.appendChild(styleNode);
         })();
+
     </script>
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
     <!--最外层的盒子-->
