移动端3个页面页面实现

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <!--顶部的搜索位置-->
         <div class="dm_header">
             <a href="#" class="header_logo3"></a>
-            <a href="#" class="header_logo"></a>
+            <a href="login.html" class="header_logo"></a>
            <!-- <input type="search" class="header_search" placeholder="请输入">-->
-            <a href="#" class="header_logo2"></a>
+            <a href="register.html" class="header_logo2"></a>
         </div>
         <!--lb-->
         <div class="dm_banner">
             <ul class="dm_banner_images clearfix">
-                <li><a href="#"><img src="images/lb4.jpg" alt=""></a></li>
+                <li><a href="shop_Introduce.html"><img src="images/lb4.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/lb1.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/lb2.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/lb3.jpg" alt=""></a></li>
@@ -52,10 +52,10 @@
         <div class="content_selected">
             <p class="selected_title">精选频道</p>
                 <div class="selected f_l">
-                    <a href="#"><img src="images/jjx_img1.jpg" alt=""></a>
+                    <a href="shop_Introduce.html"><img src="images/jjx_img1.jpg" alt=""></a>
                 </div>
                 <div class="selected f_l">
-                    <a href="#"><img src="images/jx_img2.png" alt=""></a>
+                    <a href="shop_Introduce.html"><img src="images/jx_img2.png" alt=""></a>
                 </div>
                 <div class="hr"></div>
         </div>
@@ -158,7 +158,6 @@
                  </li>
              </ul>
         </div>
-
     </div>
 </body>
 </html>
