--- a/shop_Introduce.html
+++ b/shop_Introduce.html
@@ -23,7 +23,7 @@
 <body>
     <div class="IN_contanier">
             <div class="IN_head">
-                <a href="#" class="head_logo1"></a>
+                <a href="index.html" class="head_logo1"></a>
                 <span class="head_title">普吉岛</span>
                 <a href="#" class="head_logo2"></a>
                 <a href="#" class="head_logo3"></a>
