--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
     <div class="register_head">
         <a href="index.html" class="head_logo1"></a>
         <span class="head_title">登陆</span>
-        <span class="login_head_title">注册</span>
+        <span class="login_head_title"><a href="register.html">注册</a></span>
         <div class="hr1"></div>
     </div>
     <!--表单-->
