--- a/shop_Introduce.html
+++ b/shop_Introduce.html
@@ -31,7 +31,7 @@
             </div>
            <div class="IN_content">
                <div class="content_list">
-                   <a href="#"><img src="images/shop5.jpg" alt=""></a>
+                   <a href="detail.html"><img src="images/shop5.jpg" alt=""></a>
                    <p class="p_text">体验全日航空的王牌美食领略不一样的旅游体验你值得拥有</p>
                    <span class="shop_num">已售200份</span>
                    <span class="shop_price"><i>￥500</i><em>起</em></span>
