--- a/detail.html
+++ b/detail.html
@@ -100,11 +100,11 @@
             </div>
             <div class="nothing6"></div>
             <div class="footer clearfix">
-                    <div class="footer_border"></div>
+                    <!--<div class="footer_border"></div>-->
                     <div>
                         <img src="images/service.png" alt="">
                     </div>
-                    <div>
+                    <div class="img_atm">
                         <img src="images/atm.png" alt="">
                     </div>
                     <div class="A"><a href="#">加入购物车</a></div>
