--- a/index.html
+++ b/index.html
@@ -146,18 +146,13 @@
         </div>
         <div class="while">
         </div>
-        <div class="footer">
-            <div class="hr1"></div>
-             <ul class="footer-list">
-                 <li><img src="images/wxb主页.png" alt=""><br>主页
-                 </li>
-                 <li><img src="images/wxb定位.png" alt=""><br>定位
-                 </li>
-                 <li><img src="images/cart.png" alt=""><br>购物车
-                 </li>
-                 <li><img src="images/man.png" alt=""><br>我的
-                 </li>
-             </ul>
+        <div class="footer_wrap">
+            <div class="footer">
+                <div><a href="#"><img src="images/wxb主页.png" alt=""><br>主页</a></div>
+                <div><a href="#"><img src="images/wxb定位.png" alt=""><br>定位</a></div>
+                <div><a href="#"><img src="images/cart.png" alt=""><br>购物车</a></div>
+                <div><a href="own.html"><img src="images/man.png" alt=""><br>我的</a></div>
+            </div>
         </div>
     </div>
 </body>
