--- a/own.html
+++ b/own.html
@@ -29,9 +29,9 @@
             <div class="hr1"></div>
         </div>
         <div class="login_state">
-            <a href="#"><img src="images/demo.png" alt=""></a>
+            <a href="#"><img src="images/no_login.png   " alt=""></a>
             <span>未登录</span>
-            <a href="#"><img src="images/more.png" alt=""></a>
+            <a href="login.html"><img src="images/more.png" alt=""></a>
         </div>
         <div class="message">
             <div class="message_1 f_l">
@@ -86,18 +86,13 @@
             <img src="images/remind.png" alt=""><span>酒店推荐</span>
         </div>
         <div class="nothing4"></div>
-        <div class="footer">
-            <div class="hr1"></div>
-            <ul class="footer-list">
-                <li><a href="index.html"><img src="images/wxb主页.png" alt=""></a><br>主页
-                </li>
-                <li><img src="images/wxb定位.png" alt=""><br>定位
-                </li>
-                <li><img src="images/cart.png" alt=""><br>购物车
-                </li>
-                <li><img src="images/man.png" alt=""><br>我的
-                </li>
-            </ul>
+        <div class="footer_wrap clearfix">
+            <div class="footer1">
+                <div><a href="index.html"><img src="images/wxb主页.png" alt=""><br>主页</a></div>
+                <div><a href="#"><img src="images/wxb定位.png" alt=""><br>定位</a></div>
+                <div><a href="#"><img src="images/cart.png" alt=""><br>购物车</a></div>
+                <div><a href="own.html"><img src="images/man.png" alt=""><br>我的</a></div>
+            </div>
         </div>
     </div>
 </body>
