--- a/login.html
+++ b/login.html
@@ -10,12 +10,14 @@
               ev = ev || event;
               ev.preventDefault();
           });*/
-        (function () {
-            let styleNode = document.createElement("style");
-            let width = document.documentElement.clientWidth/16;
-            styleNode.innerHTML = "html{font-size:"+width+"px!important}";
-            document.head.appendChild(styleNode);
-        })();
+        window.onload =function () {
+            (function () {
+                var styleNode = document.createElement("style");
+                var width = document.documentElement.clientWidth/16;
+                styleNode.innerHTML = "html{font-size:"+width+"px!important}";
+                document.head.appendChild(styleNode);
+            })();
+        }
     </script>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/register.css">
