--- a/own.html
+++ b/own.html
@@ -14,8 +14,8 @@
               ev.preventDefault();
           });*/
         (function () {
-            let styleNode = document.createElement("style");
-            let width = document.documentElement.clientWidth/16;
+            var styleNode = document.createElement("style");
+            var width = document.documentElement.clientWidth/16;
             styleNode.innerHTML = "html{font-size:"+width+"px!important}";
             document.head.appendChild(styleNode);
         })();
