实现购物车页面

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             <a href="#" class="header_logo3"></a>
             <a href="login.html" class="header_logo"></a>
            <!-- <input type="search" class="header_search" placeholder="请输入">-->
-            <a href="register.html" class="header_logo2"></a>
+            <a href="own.html" class="header_logo2"></a>
         </div>
         <!--lb-->
         <div class="dm_banner">
             <ul class="dm_banner_images clearfix">
-                <li><a href="shop_Introduce.html"><img src="images/lb4.jpg" alt=""></a></li>
+                <li><a href="shop_Introduce.html"><img src="images/lb3.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/lb1.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/lb2.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/lb3.jpg" alt=""></a></li>
@@ -150,7 +150,7 @@
             <div class="footer">
                 <div><a href="#"><img src="images/wxb主页.png" alt=""><br>主页</a></div>
                 <div><a href="#"><img src="images/wxb定位.png" alt=""><br>定位</a></div>
-                <div><a href="#"><img src="images/cart.png" alt=""><br>购物车</a></div>
+                <div><a href="cart.html"><img src="images/cart.png" alt=""><br>购物车</a></div>
                 <div><a href="own.html"><img src="images/man.png" alt=""><br>我的</a></div>
             </div>
         </div>
