定位页面设计实现

--- a/category.html
+++ b/category.html
@@ -22,6 +22,7 @@
     </script>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/category.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
     <div class="cate_container">
@@ -31,6 +32,56 @@
             </div>
             <span class="cate_head_img"></span>
         </div>
+
+        <div class="main">
+            <!--left-->
+            <!--  左边的区域 -->
+            <div class="main_left f_l">
+                <ul>
+                    <li class='current'><a href="#">泰国</a></li>
+                    <li><a href="#">马来西亚</a></li>
+                    <li><a href="#">美国</a></li>
+                    <li><a href="#">澳大利亚</a></li>
+                    <li><a href="#">日本</a></li>
+                    <li><a href="#">新西兰</a></li>
+                    <li><a href="#">毛里求斯</a></li>
+                    <li><a href="#">加拿大</a></li>
+                </ul>
+            </div>
+            <!--右边的区域 -->
+            <div class="main_right">
+                <!-- 列表内容 -->
+                <!-- ul.clearfix>li*15>a[href='#']>img[src='images/nv-fy.jpg']+p{毛呢大衣} -->
+                <ul>
+                    <li><a href="#">
+                        <img src="images/cate5.png">
+                    </a></li>
+                    <li><a href="#">
+                        <img src="images/cate1.png">
+                    </a></li>
+                    <li><a href="#">
+                        <img src="images/cate6.png">
+                    </a></li>
+                    <li><a href="#">
+                        <img src="images/cate2.png" alt="">
+                    </a></li>
+                    <li><a href="#">
+                        <img src="images/cate3.png" alt="">
+                    </a></li>
+                    <li><a href="#">
+                        <img src="images/cate4.png" alt="">
+                    </a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer_wrap">
+        <div class="footer">
+            <div><a href="index.html"><img src="images/wxb主页.png" alt=""><br>主页</a></div>
+            <div><a href="category.html"><img src="images/wxb定位.png" alt=""><br>定位</a></div>
+            <div><a href="cart.html"><img src="images/cart.png" alt=""><br>购物车</a></div>
+            <div><a href="own.html"><img src="images/man.png" alt=""><br>我的</a></div>
+        </div>
+    </div>
     </div>
 </body>
 </html>
