--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
         </div>
         <div class="footer_wrap">
             <div class="footer">
-                <div><a href="#"><img src="images/wxb主页.png" alt=""><br>主页</a></div>
-                <div><a href="#"><img src="images/wxb定位.png" alt=""><br>定位</a></div>
+                <div><a href="index.html"><img src="images/wxb主页.png" alt=""><br>主页</a></div>
+                <div><a href="category.html"><img src="images/wxb定位.png" alt=""><br>定位</a></div>
                 <div><a href="cart.html"><img src="images/cart.png" alt=""><br>购物车</a></div>
                 <div><a href="own.html"><img src="images/man.png" alt=""><br>我的</a></div>
             </div>
