搜索页面全部实现

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!--顶部的搜索位置-->
         <div class="dm_header">
             <a href="#" class="header_logo3"></a>
-            <a href="login.html" class="header_logo"></a>
+            <a href="search.html" class="header_logo"></a>
            <!-- <input type="search" class="header_search" placeholder="请输入">-->
             <a href="own.html" class="header_logo2"></a>
         </div>
