--- a/search.html
+++ b/search.html
@@ -35,11 +35,31 @@
     </div>
     <div class="mian">
         <div class="search_content">
-
+            <span>搜索结果</span>
+            <div class="search_result clearfix">
+                <div class="name_in_left f_l">
+                    泰国
+                </div>
+                <div class="target_in_right f_r">
+                    目的地
+                </div>
+                <div class="hr"></div>
+            </div>
+            <div class="related">
+                <p>于“泰国”相关的旅游项目有<i>211</i>个</p>
+            </div>
         </div>
-        <div class="search_history">
-
-        </div>
+       <div class="search_history">
+            <span>历史搜索</span>
+            <div class="history_content">
+                <p>新西兰</p>
+                <div class="hr"></div>
+            </div>
+           <div class="history_content">
+               <p>马尔代夫</p>
+               <div class="hr"></div>
+           </div>
+       </div>
     </div>
 </div>
 </body>
