实现首页的js原生无缝滑屏实现

--- a/index.html
+++ b/index.html
@@ -10,14 +10,6 @@
             ev = ev || event;
             ev.preventDefault();
         });*/
-      window.onload =function () {
-          (function () {
-              var styleNode = document.createElement("style");
-              var width = document.documentElement.clientWidth/16;
-              styleNode.innerHTML = "html{font-size:"+width+"px!important}";
-              document.head.appendChild(styleNode);
-          })();
-      }
     </script>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/home.css">
@@ -35,7 +27,7 @@
         <!--lb-->
         <div class="dm_banner">
             <ul class="dm_banner_images clearfix">
-                <li><a href="shop_Introduce.html"><img src="images/lb3.jpg" alt=""></a></li>
+                <li><a href="shop_Introduce.html"><img src="images/lb4.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/lb1.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/lb2.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/lb3.jpg" alt=""></a></li>
@@ -155,5 +147,7 @@
             </div>
         </div>
     </div>
+<script src="./js/public.js"></script>
+<script src="./js/index.js"></script>
 </body>
 </html>
