--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>大猫旅行</title>
     <script type="text/javascript">
-      /*  document.addEventListener("touchstart",function (ev) {
-            ev = ev || event;
-            ev.preventDefault();
-        });*/
+      (function () {
+          var styleNode = document.createElement("style");
+          var width = document.documentElement.clientWidth / 16;
+          styleNode.innerHTML = "html{font-size:" + width + "px!important}";
+          document.head.appendChild(styleNode);
+      })();
     </script>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/home.css">
