index轮播buy实现调整

--- a/index.html
+++ b/index.html
@@ -158,8 +158,7 @@
     </div>
 <script src="./js/public.js"></script>
 <script src="./js/index.js"></script>
-    <script src="./js/transform.js"></script>
-    <script src="./js/move.js"></script>
-
+   <!-- <script src="./js/transform.js"></script>
+    <script src="./js/move.js"></script>-->
 </body>
 </html>
